syntax = "proto3";

package resources.users;

import "buf/validate/validate.proto";

option go_package = "github.com/fivenet-app/fivenet/v2025/gen/go/proto/resources/users;users";

message License {
  string type = 1 [(buf.validate.field).string = {
    min_len: 1
    max_len: 60
  }];
  string label = 2 [(buf.validate.field).string.max_len = 60];
}

message CitizensLicenses {
  int32 user_id = 1 [(buf.validate.field).int32.gt = 0];
  repeated License licenses = 2;
}
